--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,19 +53,19 @@ RPM:
   parallel:
     matrix:
       - RUNNER:
-          - aws/fedora-33-x86_64
-          - aws/fedora-33-aarch64
-          - aws/fedora-34-x86_64
-          - aws/fedora-34-aarch64
-          - aws/rhel-8.4-ga-x86_64
-          - aws/rhel-8.4-ga-aarch64
-          - aws/centos-stream-8-x86_64
-          - aws/centos-stream-8-aarch64
+          - aws-ng/fedora-33-x86_64
+          - aws-ng/fedora-33-aarch64
+          - aws-ng/fedora-34-x86_64
+          - aws-ng/fedora-34-aarch64
+          - aws-ng/rhel-8.4-ga-x86_64
+          - aws-ng/rhel-8.4-ga-aarch64
+          - aws-ng/centos-stream-8-x86_64
+          - aws-ng/centos-stream-8-aarch64
       - RUNNER:
-          - aws/rhel-8.6-nightly-x86_64
-          - aws/rhel-8.6-nightly-aarch64
-          - aws/rhel-9.0-nightly-x86_64
-          - aws/rhel-9.0-nightly-aarch64
+          - aws-ng/rhel-8.6-nightly-x86_64
+          - aws-ng/rhel-8.6-nightly-aarch64
+          - aws-ng/rhel-9.0-nightly-x86_64
+          - aws-ng/rhel-9.0-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
 
 Container:
@@ -79,6 +79,7 @@ Container:
     matrix:
       - RUNNER:
           - aws/fedora-33-x86_64
+          - aws-ng/fedora-33-x86_64
 
 Prepare-rhel-internal:
   stage: prepare-rhel-internal
@@ -131,6 +132,23 @@ Base:
           - aws/rhel-9.0-nightly-x86_64
           - aws/rhel-9.0-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
+
+      - RUNNER:
+          - aws-ng/fedora-33-x86_64
+          - aws-ng/fedora-33-aarch64
+          # See COMPOSER-919
+          # - aws-ng/fedora-34-x86_64
+          # - aws-ng/fedora-34-aarch64
+          - aws-ng/rhel-8.4-ga-x86_64
+          - aws-ng/rhel-8.4-ga-aarch64
+          - aws-ng/centos-stream-8-x86_64
+          - aws-ng/centos-stream-8-aarch64
+      - RUNNER:
+          - aws-ng/rhel-8.6-nightly-x86_64
+          - aws-ng/rhel-8.6-nightly-aarch64
+          - aws-ng/rhel-9.0-nightly-x86_64
+          - aws-ng/rhel-9.0-nightly-aarch64
+        INTERNAL_NETWORK: ["true"]
   artifacts:
     paths:
       - journal-log.gpg
@@ -151,6 +169,7 @@ Manifests:
     matrix:
       - RUNNER:
           - aws/rhel-9.0-nightly-x86_64
+          - aws-ng/rhel-9.0-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
   artifacts:
     paths:
@@ -184,72 +203,26 @@ Regression:
           - aws/rhel-9.0-nightly-x86_64
           - aws/rhel-9.0-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
+
+      - RUNNER:
+          - aws-ng/fedora-33-x86_64
+          - aws-ng/fedora-33-aarch64
+          # Enable f34 once we have rpmrepo snapshots for it
+          - aws-ng/centos-stream-8-x86_64
+          - aws-ng/centos-stream-8-aarch64
+      - RUNNER:
+          - aws-ng/rhel-8.4-ga-x86_64
+          - aws-ng/rhel-8.4-ga-aarch64
+          - aws-ng/rhel-8.6-nightly-x86_64
+          - aws-ng/rhel-8.6-nightly-aarch64
+          - aws-ng/rhel-9.0-nightly-x86_64
+          - aws-ng/rhel-9.0-nightly-aarch64
+        INTERNAL_NETWORK: ["true"]
   artifacts:
     paths:
       - journal-log.gpg
       - "*.repo"
     when: always
-
-OSTree:
-  stage: test
-  extends: .terraform/openstack
-  rules:
-    - if: '$CI_PIPELINE_SOURCE != "schedule"'
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-9.0-[^ga][\S]+/ && $NIGHTLY == "true" && $RHEL_MAJOR == "9"'
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-8.6-[^ga][\S]+/ && $NIGHTLY == "true" && $RHEL_MAJOR == "8"'
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/ostree.sh
-  parallel:
-    matrix:
-      - RUNNER:
-          - openstack/fedora-33-x86_64
-          # See COMPOSER-919
-          # - openstack/fedora-34-x86_64
-          - openstack/rhel-8.4-ga-x86_64
-          - openstack/rhel-8.6-nightly-x86_64
-          - openstack/rhel-9.0-nightly-x86_64
-          - openstack/centos-stream-8-x86_64
-
-New OSTree:
-  stage: test
-  extends: OSTree
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/ostree-ng.sh
-  parallel:
-    matrix:
-      - RUNNER:
-          - openstack/rhel-8.6-nightly-x86_64-large
-          - openstack/rhel-9.0-nightly-x86_64-large
-          - openstack/centos-stream-8-x86_64
-
-OSTree simplified installer:
-  stage: test
-  extends: OSTree
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/ostree-simplified-installer.sh
-  parallel:
-    matrix:
-      - RUNNER:
-          - openstack/rhel-8.6-nightly-x86_64-large
-          - openstack/centos-stream-8-x86_64
-          # NOTE: coreos-installer not yet available in RHEL 9.0
-          # - openstack/rhel-9.0-nightly-x86_64
-
-OSTree raw image:
-  stage: test
-  extends: OSTree
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/ostree-raw-image.sh
-  parallel:
-    matrix:
-      - RUNNER:
-          - openstack/rhel-8.6-nightly-x86_64
-          - openstack/centos-stream-8-x86_64
-          - openstack/rhel-9.0-nightly-x86_64
 
 .INTEGRATION_TESTS: &INTEGRATION_TESTS
   SCRIPT:
@@ -257,7 +230,6 @@ OSTree raw image:
     - aws.sh
     - azure.sh
     - vmware.sh
-    - filesystem.sh
     - cross-distro.sh
 
 Integration:
@@ -294,6 +266,29 @@ Integration:
           - azure_hyperv_gen2.sh
         RUNNER:
           - aws/rhel-8.6-nightly-x86_64
+        INTERNAL_NETWORK: ["true"]
+      - <<: *INTEGRATION_TESTS
+        RUNNER:
+          - aws-ng/fedora-33-x86_64
+          # See COMPOSER-919
+          # - aws-ng/fedora-34-x86_64
+          # See COMPOSER-1118
+          # - aws-ng/centos-stream-8-x86_64
+      - SCRIPT:
+          - koji.sh
+          - aws.sh
+        RUNNER:
+          - aws-ng/centos-stream-8-x86_64
+      - <<: *INTEGRATION_TESTS
+        RUNNER:
+          - aws-ng/rhel-8.4-ga-x86_64
+          - aws-ng/rhel-8.6-nightly-x86_64
+          - aws-ng/rhel-9.0-nightly-x86_64
+        INTERNAL_NETWORK: ["true"]
+      - SCRIPT:
+          - azure_hyperv_gen2.sh
+        RUNNER:
+          - aws-ng/rhel-8.6-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
 
 .API_TESTS: &API_TESTS
@@ -334,50 +329,25 @@ API:
           - aws/rhel-8.6-nightly-x86_64
           - aws/rhel-9.0-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
-
-libvirt:
-  stage: test
-  extends: .terraform/openstack
-  rules:
-    - if: '$CI_PIPELINE_SOURCE != "schedule"'
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-9.0-[^ga][\S]+/ && $NIGHTLY == "true" && $RHEL_MAJOR == "9"'
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-8.6-[^ga][\S]+/ && $NIGHTLY == "true" && $RHEL_MAJOR == "8"'
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/libvirt.sh
-  parallel:
-    matrix:
-      - RUNNER:
-          - openstack/fedora-33-x86_64
-          - openstack/centos-stream-8-x86_64
-      - RUNNER:
-          - openstack/rhel-8.4-ga-x86_64
-          - openstack/rhel-8.6-nightly-x86_64
-          - openstack/rhel-9.0-nightly-x86_64
+      - <<: *API_TESTS
+        RUNNER:
+          - aws-ng/fedora-33-x86_64
+          # See COMPOSER-919
+          # - aws-ng/fedora-34-x86_64
+          # See COMPOSER-1118
+          # - aws-ng/centos-stream-8-x86_64
+      - TARGET:
+          - aws
+          - gcp
+          - aws.s3
+        RUNNER:
+          - aws-ng/centos-stream-8-x86_64
+      - <<: *API_TESTS
+        RUNNER:
+          - aws-ng/rhel-8.4-ga-x86_64
+          - aws-ng/rhel-8.6-nightly-x86_64
+          - aws-ng/rhel-9.0-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
-
-RHEL 9 on 8:
-  stage: test
-  extends: .terraform
-  rules:
-    - if: '$CI_PIPELINE_SOURCE != "schedule"'
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/koji.sh
-  variables:
-    RUNNER: aws/rhel-8.4-ga-x86_64
-    INTERNAL_NETWORK: "true"
-    DISTRO_CODE: rhel-90
-
-NIGHTLY_FAIL:
-  stage: finish
-  tags:
-    - shell
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $NIGHTLY == "true"'
-      when: on_failure
-  script:
-    - schutzbot/slack_notification.sh FAILED ":big-sad:"
 
 NIGHTLY_SUCCESS:
   stage: finish
@@ -387,22 +357,6 @@ NIGHTLY_SUCCESS:
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $NIGHTLY == "true"'
   script:
     - schutzbot/slack_notification.sh SUCCESS ":partymeow:"
-
-Installer:
-  stage: test
-  extends: .terraform/openstack
-  rules:
-    - if: '$CI_PIPELINE_SOURCE != "schedule"'
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-9\.[0-9]-[^ga][\S]+/ && $NIGHTLY == "true" && $RHEL_MAJOR == "9"'
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-8\.[0-9]-[^ga][\S]+/ && $NIGHTLY == "true" && $RHEL_MAJOR == "8"'
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/installers.sh
-  parallel:
-    matrix:
-      - RUNNER:
-          - openstack/rhel-8.6-nightly-x86_64
-          - openstack/rhel-9.0-nightly-x86_64
 
 SCHEDULED_CLOUD_CLEANER:
   stage: cleanup
